[gd_scene load_steps=35 format=2]

[ext_resource path="res://cat/Canine_Gray_Run.png" type="Texture" id=1]
[ext_resource path="res://enemy/cat.gd" type="Script" id=2]
[ext_resource path="res://collision/hurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemyInfo.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemy/PawnSense.tscn" type="PackedScene" id=5]
[ext_resource path="res://collision/hitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://collision/enemyCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://cat/Canine_Gray_Attack.png" type="Texture" id=8]
[ext_resource path="res://enemy/patrol.tscn" type="PackedScene" id=9]
[ext_resource path="res://cat/Canine_Gray_Idle.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 48, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "catRun",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 0, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 48, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 96, 32, 48, 32 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "catAttack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 2.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 3.0
height = 12.0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 77, 25.5 )

[sub_resource type="CircleShape2D" id=11]
radius = 2.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 1.0
height = 10.0

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=23]
resource_name = "catAttack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=22]
resource_name = "catRun"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=24]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="cat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
hframes = 4
vframes = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 7 )
animation = "catRun"

[node name="catAttack" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 20 )
animation = "catAttack"
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 1 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="hurtBox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="hurtBox" index="0"]
rotation = 1.5708
shape = SubResource( 9 )

[node name="enemyInfo" parent="." instance=ExtResource( 4 )]
max_health = 4

[node name="PawnSense" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PawnSense" index="0"]
modulate = Color( 1, 1, 1, 0.564706 )
shape = SubResource( 10 )

[node name="hitBox" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="hitBox" index="0"]
position = Vector2( -7, 0 )
shape = SubResource( 11 )

[node name="enemyCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="enemyCollision" index="0"]
position = Vector2( 1, 6 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/RESET = SubResource( 21 )
anims/catAttack = SubResource( 23 )
anims/catRun = SubResource( 22 )
anims/idle = SubResource( 24 )

[node name="patrol" parent="." instance=ExtResource( 9 )]

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
[connection signal="killEnemy" from="enemyInfo" to="." method="_on_enemyInfo_killEnemy"]

[editable path="hurtBox"]
[editable path="PawnSense"]
[editable path="hitBox"]
[editable path="enemyCollision"]
